scripts/nullaway/wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8.txt
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:53: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                              ^
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:53: warning: SignalHandler is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
                                                   ^
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:56: warning: Signal is internal proprietary API and may be removed in a future release
                public synchronized void handle(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Signal signal) {
                                                                                                                                                                  ^
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:53: warning: Signal is internal proprietary API and may be removed in a future release
            Signal.handle(new Signal("WINCH"), new SignalHandler() {
            ^
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/screen/ScreenImpl.java:65: error: [NullAway] dereferenced expression currentScreenSize is @Nullable
            currentScreenSizeX = currentScreenSize.getX();
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/Key.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.cursorLocation = null;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/input/Key.java:71: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.cursorLocation = null;
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/screen/Resize.java:33: error: [NullAway] dereferenced expression s is @Nullable
                    final String labelW = " " + s.getX() + " ";
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/util/U.java:96: error: [NullAway] dereferenced expression size is @Nullable
            t.write(0, size.getY() - 1, CharProps.DEFAULT, "   hit 'q' to quit...");
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Area.java:17: error: [NullAway] dereferenced expression terminalSize is @Nullable
            final int blockWidth = terminalSize.getX() / 4 - 10;
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Resize.java:28: error: [NullAway] dereferenced expression newSize is @Nullable
        t.write(20, 1, "                                      ", 20, 1, newSize.getX() + "x" + newSize.getY(), 0, 0);
                                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Input.java:25: error: [NullAway] dereferenced expression t.getTerminalSize() is @Nullable
                if (currentRow >= t.getTerminalSize().getY()) {
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/test/terminal/Twinkle.java:47: error: [NullAway] dereferenced expression terminalSize is @Nullable
                final int x = r.nextInt(terminalSize.getX());
                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:21: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().writer() : new OutputStreamWriter(System.out);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/UnixTerminal.java:26: error: [NullAway] dereferenced expression System.console() is @Nullable
        return HAVE_CONSOLE ? System.console().reader() : new InputStreamReader(System.in);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:15: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
../wpi/url79f898233e_tombrus_jvthundred_tgz-pJ8-com_tombrus_vthundred_test_screen_BorderJ8/src/com/tombrus/vthundred/terminal/types/AnsiCursorPositionPattern.java:43: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return result.get();
            ^
    (see http://t.uber.com/nullaway )
15 errors
4 warnings
